--- a/Exercise 7.Rmd
+++ b/Exercise 7.Rmd
@@ -48,10 +48,10 @@ BACC <- function(y, yhat){
 
 ```
 
-
 # Task 1
 
 ## Loading and preprocessing
+
 ```{r}
 bank <- read_delim("bank.csv", delim=";")
 
@@ -62,8 +62,7 @@ bank <- bank %>%
   mutate(y=ifelse(y=="yes", 1 , 0))
   
 bank %>% 
-  head(5) %>% 
-  kable()
+  head(5) 
 
 # there is a strong class imbalance
 label_ratios <- bank %>% 
@@ -75,6 +74,7 @@ label_ratios <- bank %>%
 ```
 
 ## a
+
 ```{r}
 # perform train set split
 n <- 3000
@@ -85,21 +85,27 @@ test <- bank[-train_idx, ]
 model.1 <- glm(y ~ ., family="binomial", data=train)
 summary(model.1)
 ```
-The dataset contains mostly categorical variables. The model resulting from the 
-algorithm also only determined categorical variables to be significant. 
-The only discrete variable, `balance`, was not found to be significant.  
-Significant variables were being retired, marital status, having a secondary education, 
-having taken a loan, not having contacted via telephone and the probability of a 
-success, as well as some months. 
+
+The dataset contains mostly categorical variables. The model resulting
+from the algorithm also only determined categorical variables to be
+significant. The only discrete variable, `balance`, was not found to be
+significant.\
+Significant variables were being retired, marital status, having a
+secondary education, having taken a loan, not having contacted via
+telephone and the probability of a success, as well as some months.
+
+
+
 
 ## b
-When making a prediction without passing "reponse" as the `type` parameter, 
-the function will return numbers on the linear scale, on which we could also 
-find our optimal decision boundary. When passing "reponse" as an arguments, 
-it will return the probability of a class being "yes". 
+
+When making a prediction without passing "reponse" as the `type`
+parameter, the function will return numbers on the linear scale, on
+which we could also find our optimal decision boundary. When passing
+"reponse" as an arguments, it will return the probability of a class
+being "yes".
+
 ```{r}
-
-
 get_decision_boundary <- function(y, yhat){
   roc2 <- measureit(yhat, y, measure=c("TPR","TNR"))
   roc2.BACC = (roc2$TPR + roc2$TNR) / 2
@@ -114,19 +120,22 @@ get_decision_boundary <- function(y, yhat){
   optimal_cutoff
 }
 
+```
+
+
+```{r}
 # make the predictions
+# train.yhat <- predict(model.1, train)
 train.yhat <- predict(model.1, train, type="response")
 # aplpy the decision boundary
 optimal_cutoff <- get_decision_boundary(train$y, train.yhat)
 train.yhat.decision <- train.yhat>optimal_cutoff
 
-```
 
 
-```{r}
 # plot the predicitons 
 plot(train$y, train.yhat, ylab="predicted", xlab="observed", 
-     main="Training decision boundary on the training dataset. \nBalanced Accuracy:" %>% paste(BACC(train$y, train.yhat.decision)),
+     main="Training decision boundary on the training dataset. \nBalanced Accuracy:" %>% paste(BACC(train$y, train.yhat.decision), "    \nMR:", MR(train$y, train.yhat.decision)),
      col=ifelse(train.yhat>optimal_cutoff, "red", "blue"))
 abline(h=optimal_cutoff)
 ```
@@ -138,13 +147,14 @@ test.yhat.decision <- test.yhat>optimal_cutoff
 
 # plot the predicitons 
 plot(test$y, test.yhat, ylab="predicted", xlab="observed", 
-     main="Testing decision boundary on the training dataset. \nBalanced Accuracy:" %>% paste(BACC(test$y, test.yhat.decision)),
+     main="Testing decision boundary on the training dataset. \nBalanced Accuracy:" %>% paste(BACC(test$y, test.yhat.decision), "    \nMR:", MR(test$y, test.yhat.decision)),
      col=ifelse(test.yhat>optimal_cutoff, "red", "blue"))
 abline(h=optimal_cutoff)
 
 ```
 
 # c: Applying weights to fight label imbalance
+
 ```{r}
 # compute label weights
 # we do this on the training data only to better simulate a real world example
@@ -169,16 +179,18 @@ test.yhat.decision <- test.yhat>optimal_cutoff
 
 # plot the predicitons 
 plot(test$y, test.yhat, ylab="predicted", xlab="observed", 
-     main="Testing decision boundary on the training dataset. \nBalanced Accuracy:" %>% paste(BACC(test$y, test.yhat.decision)),
+     main="Testing decision boundary on the test dataset. \nBalanced Accuracy:" %>% paste(BACC(test$y, test.yhat.decision), "    \nMR:", MR(test$y, test.yhat.decision)),
      col=ifelse(test.yhat>optimal_cutoff, "red", "blue"))
 abline(h=optimal_cutoff)
 
 ```
-I generate weights by getting the inverse class frequencies. 
-The balanced accuracy on the test set does not improve by applying the weights though. 
 
+I generate weights by getting the inverse class frequencies. The
+balanced accuracy on the test set does not improve by applying the
+weights though.
 
 # d: Stepwise regression
+
 ```{r}
 model.2.step <- step(model.2, direction="both")
 
@@ -193,18 +205,18 @@ test.yhat.decision <- test.yhat>optimal_cutoff
 # plot the predicitons 
 plot(test$y, test.yhat, ylab="predicted", xlab="observed", 
      main="Testing decision boundary on the training dataset. \nBalanced Accuracy:" %>% 
-       paste(BACC(test$y, test.yhat.decision)),
+       paste(BACC(test$y, test.yhat.decision), "    \nMR:", MR(test$y, test.yhat.decision)),
      col=ifelse(test.yhat>optimal_cutoff, "red", "blue"))
 abline(h=optimal_cutoff)
 
 ```
 
-The stepwise variable selection made a miniscule improvement on the weighted model, 
-but the balanced accuracy of the first model is still unbeaten. 
-
-
+The stepwise variable selection made a miniscule improvement on the
+weighted model, but the balanced accuracy of the first model is still
+unbeaten.
 
 # Task 2
+
 ```{r}
 train <- Khan$xtrain %>% as.data.frame()
 test <- Khan$xtest %>% as.data.frame()
@@ -213,45 +225,48 @@ test$y <- Khan$ytest
 summary(train[,1:5])
 ```
 
-all fail and take very long to do that. 
+all fail and take very long to do that.
+
 ```{r}
-# eval_model <- function(model){
-#   rda_predictions <- predict(model, newdata = test)
-#   confusion_matrix <- table(Predicted = rda_predictions$class, Actual = test$y)
-#   accuracy <- sum(diag(confusion_matrix)) / sum(confusion_matrix)
-#   print(accuracy)
-# }
-# 
-# tryCatch({
-#   # LDA
-#   lda_model <- rda(y ~ ., data = train, gamma = 0, lambda = 1)
-#   lda_model %>% print()
-#   eval_model(lda_model)
-# })
-# 
-# tryCatch({
-#   # QDA
-#   qda_model <- rda(y ~ ., data = train, gamma = 0, lambda = 0)
-#   qda_model %>% print()
-#   eval_model(qda_model)
-# })
-# 
-# tryCatch({
-#   # RDA
-#   qda_model <- rda(y ~ ., data = train, gamma = 0.5, lambda = 0.5)
-#   qda_model %>% print()
-#   eval_model(qda_model)
-# })
+eval_model <- function(model){
+  rda_predictions <- predict(model, newdata = test)
+  confusion_matrix <- table(Predicted = rda_predictions$class, Actual = test$y)
+  accuracy <- sum(diag(confusion_matrix)) / sum(confusion_matrix)
+  print(accuracy)
+}
+
+tryCatch({
+  # LDA
+  lda_model <- rda(y ~ ., data = train, gamma = 0, lambda = 1)
+  lda_model %>% print()
+  eval_model(lda_model)
+})
+
+tryCatch({
+  # QDA
+  qda_model <- rda(y ~ ., data = train, gamma = 0, lambda = 0)
+  qda_model %>% print()
+  eval_model(qda_model)
+})
+
+tryCatch({
+  # RDA
+  qda_model <- rda(y ~ ., data = train, gamma = 0.5, lambda = 0.5)
+  qda_model %>% print()
+  eval_model(qda_model)
+})
 
 
 ```
-I commented out the code to test the LDA, QDA and RDA functions, because they 
 
-LDA does not work because the matrix is apparently exploding upon inverting and becoming singular. 
-It has a misclassification rate of 100%.  
-Same with QDA.  
-Picking a gamma and lambda at 0.5 also did not help. 
+I commented out the code to test the LDA, QDA and RDA functions, because
+they
 
+LDA does not work because the matrix is apparently exploding upon
+inverting and becoming singular. It has a misclassification rate of
+100%.\
+Same with QDA.\
+Picking a gamma and lambda at 0.5 also did not help.
 
 ```{r}
 model.cv <- cv.glmnet(train %>% dplyr::select(-y) %>% as.matrix(), train$y %>% as.factor(), 
@@ -262,14 +277,16 @@ model.cv %>% plot(main=model.cv$lambda.1se %>% round(7) %>% paste("Optimal lambd
 
 # model.cv$nzero
 ```
-This function now minimizes the negative log likelyhood of the logistic regression 
-and also the regularization term, independent on the parameter $\lambda$.  
-The algorithm selected 9 parameters by the 1-standard-error rule.  
-The algorithm issues a warning, that a binomial class with fewer than 8 observations 
-makes it unstable. 
 
+This function now minimizes the negative log likelyhood of the logistic
+regression and also the regularization term, independent on the
+parameter $\lambda$.\
+The algorithm selected 9 parameters by the 1-standard-error rule.\
+The algorithm issues a warning, that a binomial class with fewer than 8
+observations makes it unstable.
 
 ## c: Getting the coefficients
+
 ```{r}
 coef(model.cv,s="lambda.1se") %>% length()
 
@@ -295,9 +312,10 @@ plot(train$V2022, train$y, col=train$y, main="Variable V2022 (relevant to group 
 plot(train$V174, train$y, col=train$y, main="Variable V2022 (relevant to group 3")
 plot(train$V2046, train$y, col=train$y, main="Variable V2022 (relevant to group 4")
 ```
-There is some overlap, but in the plots we can see some difference in group membership 
-when plotting it against variables relevant to the groups. 
 
+There is some overlap, but in the plots we can see some difference in
+group membership when plotting it against variables relevant to the
+groups.
 
 ## Making predictions
 
@@ -310,13 +328,14 @@ cm
 
 
 ```
+
 ## Get misclassification error
+
 ```{r}
 ME <- 1 - sum(diag(cm)) / sum(cm)
 print(ME %>% paste("Misclassification rate:", .))
 
 ```
-Quite surprisingly, I get a 100% accuracy on the test set, which is suspicious.
 
-
-
+Quite surprisingly, I get a 100% accuracy on the test set, which is
+suspicious.
